src/objects/M_E_Metrics__c.object
<CustomObject>
    <description>M &amp; E Metrics</description>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The actual value for this metric. This will usually be calculated, but may be entered manually for some metrics</description>
        <inlineHelpText>The actual value for this metric. This will usually be calculated, but may be entered manually for some metrics</inlineHelpText>
        <label>Actual Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <description>Is this value automated or not? This will determine whether it is editable on the Metric Admin page.</description>
        <inlineHelpText>Is this value automated or not? This will determine whether it is editable on the Metric Admin page.</inlineHelpText>
        <label>Automated</label>
        <picklist>
            <picklistValues>
                <fullName>False</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>M_E_Area__c</fullName>
        <description>Under what M&amp;E area does this metric fall? This helps with organisation on the dashboard.</description>
        <inlineHelpText>Under what M&amp;E area does this metric fall? This helps with organisation on the dashboard.</inlineHelpText>
        <label>M&amp;E Area</label>
        <picklist>
            <picklistValues>
                <fullName>Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Label__c</fullName>
        <description>This is the label that is displayed for this metric</description>
        <inlineHelpText>This is the label that is displayed for this metric</inlineHelpText>
        <label>Metric Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <description>This is the internal metric name. It is used by formulars to pick up the metric.</description>
        <inlineHelpText>This is the internal metric name. It is used by formulars to pick up the metric.</inlineHelpText>
        <label>Metric Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The projected value for this metric for the given quarter. Should be entered manually.</description>
        <inlineHelpText>The projected value for this metric for the given quarter. Should be entered manually</inlineHelpText>
        <label>Projected Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date of the quarter to which this metric belongs</description>
        <inlineHelpText>This can simply be any date falling in the quarter to which this metric belongs. We shall calculate the quarter dynamically. It defaults to the current date.</inlineHelpText>
        <label>Quarter Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scorecard__c</fullName>
        <description>Under what area of the balanced scorecard does this metric fall?</description>
        <inlineHelpText>Under what area of the balanced scorecard does this metric fall?</inlineHelpText>
        <label>Scorecard Area</label>
        <picklist>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>M&amp;E Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>M&amp;E Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;E Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>